--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/node": "^20.12.7",
     "aws-sdk": "^2.1603.0",
     "redis": "^4.6.13",
     "typescript": "^5.4.5"
